--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 @import 'tailwindcss/utilities';
 
 .App {
-  background: linear-gradient(to top left, 
+   background:  white;
+   /* linear-gradient(to top left, 
     #67d7ff,
      #4bbcad,
      #60bc4b,
@@ -15,9 +16,9 @@
     #e562ff,
     #a86eee,
     #5b87ff,
-    #5b7fff
-
-   ); /* Adjust color stops and direction as needed */
+    #5b7fff ); */
+    
+    /* Adjust color stops and direction as needed */
   height: 100vh; /* Set height to fill the viewport */
   overflow: auto; /*Hide overflow content*/
 }
